--- a/test/build.gradle
+++ b/test/build.gradle
@@ -5,8 +5,21 @@ plugins {
 
 repositories {
     mavenCentral()
+    maven {
+        url = 'https://maven.fabricmc.net/'
+    }
+}
+
+def mappings = crochet.mappings('officialToIntermediary')
+
+configurations.configureEach {
+    reso
 }
 
 dependencies {
-    modImplementation 'dev.lukebemish.autoextension:autoextension:0.1.1'
+    crochetMappingsOfficialToIntermediary 'net.fabricmc:intermediary:1.20.4'
+
+    implementation('dev.lukebemish.autoextension:autoextension:0.1.1') {
+        crochet.remap(it, mappings)
+    }
 }
