--- a/test/build.gradle
+++ b/test/build.gradle
@@ -24,19 +24,33 @@ dependencies {
     crochetMappingsOfficialToIntermediary 'net.fabricmc:intermediary:1.20.4'
 
     implementationRemapped 'dev.lukebemish.autoextension:autoextension:0.1.1'
+    implementationRemapped project(':subproject')
 }
 
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            from components.java
-        }
-    }
+tasks.register("resolveRuntimeClasspath", Copy) {
+    from(configurations.runtimeClasspath)
+    into(layout.buildDirectory.dir("runtimeClasspath"))
+}
 
-    repositories {
-        maven {
-            name 'repo'
-            url project.file('build/repo')
+allprojects {
+    apply plugin: 'java'
+    apply plugin: 'maven-publish'
+
+    version = rootProject.version
+    group = rootProject.group
+
+    publishing {
+        publications {
+            mavenJava(MavenPublication) {
+                from components.java
+            }
+        }
+
+        repositories {
+            maven {
+                name 'repo'
+                url rootProject.file('build/repo')
+            }
         }
     }
 }
