--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,7 @@ plugins {
     id 'java-gradle-plugin'
 }
 
-group 'dev.lukebemish.crochet'
-version '1.0-SNAPSHOT'
+version = '0.1.0'
 
 gradlePlugin {
     plugins {
@@ -23,5 +22,9 @@ dependencies {
     implementation 'commons-io:commons-io:2.11.0'
     implementation 'org.apache.commons:commons-text:1.10.0'
     implementation 'com.google.code.gson:gson:2.10'
-    implementation 'com.google.guava:guava:31.1-jre'
+    implementation 'com.google.guava:guava:33.0.0-jre'
+}
+
+subprojects {
+    version = rootProject.version
 }
