Set up version capture

--- a/test/build.gradle
+++ b/test/build.gradle
@@ -16,20 +16,18 @@ repositories {
     }
 }
 
-def mappings = crochet.mappings('official', 'intermediary')
+crochet {
+    def ms = mappings('official', 'intermediary')
+    setupConfigurations('', ms, 'remapped')
 
-crochet.setupConfigurations('', mappings, 'remapped')
+    useTinyRemapper()
+}
 
 dependencies {
     crochetMappingsOfficialToIntermediary 'net.fabricmc:intermediary:1.20.4'
 
     implementationRemapped 'dev.lukebemish.autoextension:autoextension:0.1.1'
     implementationRemapped project(':subproject')
-}
-
-tasks.register("resolveRuntimeClasspath", Copy) {
-    from(configurations.runtimeClasspath)
-    into(layout.buildDirectory.dir("runtimeClasspath"))
 }
 
 allprojects {
