--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java-gradle-plugin'
+    id 'maven-publish'
 }
 
 version = '0.1.0'
@@ -23,6 +24,12 @@ dependencies {
     implementation 'org.apache.commons:commons-text:1.10.0'
     implementation 'com.google.code.gson:gson:2.10'
     implementation 'com.google.guava:guava:33.0.0-jre'
+}
+
+tasks.named('jar', Jar) {
+    manifest {
+        attributes(['Implementation-Version': project.version])
+    }
 }
 
 subprojects {
