--- a/remappers/tiny-remapper/build.gradle
+++ b/remappers/tiny-remapper/build.gradle
@@ -1,5 +1,6 @@
 plugins {
-    id 'java'
+    id 'java-library'
+    id 'maven-publish'
 }
 
 repositories {
@@ -15,4 +16,12 @@ repositories {
 
 dependencies {
     implementation "net.fabricmc:tiny-remapper:0.9.0"
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
 }
