--- a/remappers/tiny-remapper/build.gradle
+++ b/remappers/tiny-remapper/build.gradle
@@ -16,6 +16,7 @@ repositories {
 
 dependencies {
     implementation "net.fabricmc:tiny-remapper:0.9.0"
+    implementation "net.fabricmc:mapping-io:0.5.0"
 }
 
 publishing {
