--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,7 @@
+import groovy.json.JsonSlurper
+import groovy.transform.EqualsAndHashCode
+import groovy.transform.TupleConstructor
+
 plugins {
     id 'java-gradle-plugin'
     id 'maven-publish'
@@ -9,11 +13,11 @@ gradlePlugin {
     plugins {
         crochet {
             id = 'dev.lukebemish.crochet'
-            implementationClass = 'dev.lukebemish.crochet.CrochetPlugin'
+            implementationClass = 'dev.lukebemish.crochet.internal.CrochetPlugin'
         }
-        fabricConvention {
-            id = 'dev.lukebemish.crochet.fabric'
-            implementationClass = 'dev.lukebemish.crochet.fabric.FabricConventionPlugin'
+        crochetRepositories {
+            id = 'dev.lukebemish.crochet.repositories'
+            implementationClass = 'dev.lukebemish.crochet.internal.CrochetRepositoriesPlugin'
         }
     }
 }
@@ -34,6 +38,95 @@ dependencies {
 tasks.named('jar', Jar) {
     manifest {
         attributes(['Implementation-Version': project.version])
+    }
+}
+
+abstract class DownloadManifest extends DefaultTask {
+    @OutputFile
+    abstract RegularFileProperty getOutputFile()
+
+    @javax.inject.Inject
+    public DownloadManifest() {
+        outputs.upToDateWhen { false }
+    }
+
+    @TaskAction
+    void execute() {
+        def outputFile = outputFile.get().asFile
+        outputFile.parentFile.mkdirs()
+        outputFile.text = 'https://piston-meta.mojang.com/mc/game/version_manifest_v2.json'.toURL().text
+    }
+}
+
+abstract class CreateMinecraftLibrariesMavenContent extends DefaultTask {
+    @OutputFile
+    abstract RegularFileProperty getOutputFile()
+
+    @Input
+    abstract Property<String> getClassName()
+
+    @Internal
+    abstract DirectoryProperty getOutputSourceDir()
+
+    @InputFile
+    abstract RegularFileProperty getManifestFile()
+
+    @TupleConstructor
+    @EqualsAndHashCode
+    private static class Module {
+        final String group
+        final String name
+    }
+
+    @javax.inject.Inject
+    public CreateMinecraftLibrariesMavenContent() {
+        outputFile.convention(outputSourceDir.file(className.map { it.replace('.', '/')+'.java' }))
+    }
+
+    @TaskAction
+    void execute() {
+        final Set<Module> modules = new LinkedHashSet<>()
+        final sourceFile = outputFile.get().asFile
+        sourceFile.parentFile.mkdirs()
+        final json = new JsonSlurper()
+        final manifest = json.parse(manifestFile.get().asFile)
+        manifest.versions.each { version ->
+            final versionData = json.parse((version.url as String).toURL())
+            versionData.libraries.each {
+                final gav = it.name.split(':')
+                modules.add(new Module(gav[0], gav[1]))
+            }
+        }
+        final classText ="""package ${className.get().split(/\./).dropRight(1).join('.')};
+
+import org.gradle.api.artifacts.repositories.RepositoryContentDescriptor;
+
+class ${className.get().split(/\./).last()} {
+    static void applyContent(RepositoryContentDescriptor descriptor) {
+${modules.collect { "        descriptor.includeModule(\"${it.group}\", \"${it.name}\");" }.join('\n')}
+    }
+}
+"""
+        sourceFile.text = classText
+    }
+}
+
+def downloadManifest = tasks.register('downloadManifest', DownloadManifest) {
+    outputFile.set(layout.buildDirectory.file("manifest.json"))
+}
+
+tasks.register('createMinecraftLibrariesMavenContent', CreateMinecraftLibrariesMavenContent) {
+    dependsOn downloadManifest
+    className.set('dev.lukebemish.crochet.internal.MinecraftLibrariesMavenContent')
+    outputSourceDir.set(project.file('src/generated/java'))
+    manifestFile.set(downloadManifest.flatMap { it.outputFile })
+}
+
+sourceSets {
+    main {
+        java {
+            srcDir 'src/generated/java'
+        }
     }
 }
 
