Switch to more configurations instead of grouping file collections for classpaths

--- a/test/build.gradle
+++ b/test/build.gradle
@@ -39,7 +39,7 @@ crochet {
         }
         fabricClient {
             client installations.fabric
-            runMods.add mods.main
+            mod mods.main
         }
     }
 }
