--- a/test/build.gradle
+++ b/test/build.gradle
@@ -1,5 +1,7 @@
 import dev.lukebemish.crochet.model.FabricInstallation
 import dev.lukebemish.crochet.model.VanillaInstallation
+import dev.lukebemish.crochet.tasks.MappingsWriter
+import net.neoforged.srgutils.IMappingFile
 
 plugins {
     id 'java'
@@ -42,4 +44,10 @@ crochet {
             mod mods.main
         }
     }
+}
+
+tasks.register('reformatMappings', MappingsWriter) {
+    inputMappings = file('mappings.tiny')
+    outputMappings = file('mappings.tsrg')
+    targetFormat = IMappingFile.Format.TSRG2
 }
