--- a/test/settings.gradle
+++ b/test/settings.gradle
@@ -1,4 +1,10 @@
 pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        // TODO: publish stuff
+        mavenLocal()
+    }
+
     includeBuild '../'
 }
 
