Working parchment (and in theory interface injection)

--- a/test/build.gradle
+++ b/test/build.gradle
@@ -10,6 +10,10 @@ plugins {
 repositories {
     repositories {
         mavenCentral()
+        maven {
+            name = "ParchmentMC"
+            url = uri("https://maven.parchmentmc.org/")
+        }
         // TODO: publish stuff
         mavenLocal()
     }
@@ -27,6 +31,7 @@ crochet {
 
             dependencies {
                 loader 'net.fabricmc:fabric-loader:0.16.0'
+                parchment 'org.parchmentmc.data:parchment-1.21:2024.07.28@zip'
             }
 
             forSourceSet(project.sourceSets.main) {
