Initial work on source remapping

--- a/build.gradle
+++ b/build.gradle
@@ -118,6 +118,7 @@ import org.gradle.api.artifacts.repositories.RepositoryContentDescriptor;
 class ${className.get().split(/\./).last()} {
     static void applyContent(RepositoryContentDescriptor descriptor) {
 ${modules.collect { "        descriptor.includeModule(\"${it.group}\", \"${it.name}\");" }.join('\n')}
+        descriptor.includeGroupAndSubgroups("com.mojang");
     }
 }
 """
