--- a/wrappers/tiny-remapper/build.gradle
+++ b/wrappers/tiny-remapper/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java-library'
+    id 'maven-publish'
+    id 'com.gradleup.shadow'
 }
 
 group = 'dev.lukebemish.crochet.wrappers'
@@ -31,5 +33,13 @@ jar {
     manifest {
         attributes 'Main-Class': 'dev.lukebemish.crochet.wrappers.tinyremapper.RemapMods'
         attributes 'Implementation-Version' : project.version as String
+    }
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
     }
 }
