--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,12 @@
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+    }
+    plugins {
+        id "com.gradleup.shadow" version '8.3.0'
+    }
+}
+
 rootProject.name = 'crochet'
 
 include 'wrappers:shared'
