--- a/build.gradle
+++ b/build.gradle
@@ -35,12 +35,13 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.jetbrains:annotations:23.1.0'
+    compileOnly 'org.jetbrains:annotations:23.1.0'
     implementation 'commons-io:commons-io:2.11.0'
     implementation 'org.apache.commons:commons-text:1.10.0'
     implementation 'com.google.code.gson:gson:2.10'
     implementation 'com.google.guava:guava:33.0.0-jre'
     implementation 'net.neoforged:srgutils:1.0.9'
+    implementation 'net.fabricmc:access-widener:2.1.0'
     implementation('dev.lukebemish:taskgraphrunner:0.1.0') {
         capabilities {
             requireCapability("dev.lukebemish:taskgraphrunner-model")
