Source remapping for output jar

--- a/test/build.gradle
+++ b/test/build.gradle
@@ -58,3 +58,11 @@ crochet {
         }
     }
 }
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
+}
