--- a/test/no-crochet/build.gradle
+++ b/test/no-crochet/build.gradle
@@ -7,3 +7,11 @@ java.withSourcesJar()
 
 group = 'dev.lukebemish.crochet.crochet-test'
 version = '1.0.0'
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
+}
