--- a/test/subproject/build.gradle
+++ b/test/subproject/build.gradle
@@ -53,3 +53,10 @@ dependencies {
     api project(':no-crochet')
 }
 
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+        }
+    }
+}
