--- a/build.gradle
+++ b/build.gradle
@@ -171,6 +171,13 @@ java {
     withJavadocJar()
 }
 
+tasks.withType(AbstractArchiveTask) {
+    preserveFileTimestamps = false
+    reproducibleFileOrder = true
+    dirMode = 0755
+    fileMode = 0644
+}
+
 abstract class DownloadManifest extends DefaultTask {
     @OutputFile
     abstract RegularFileProperty getOutputFile()
