--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -50,6 +50,13 @@ java {
     withJavadocJar()
 }
 
+tasks.withType(AbstractArchiveTask) {
+    preserveFileTimestamps = false
+    reproducibleFileOrder = true
+    dirMode = 0755
+    fileMode = 0644
+}
+
 compileJava {
     options.compilerArgs += ["-Aproject=${project.group}/${project.name}"]
 }
