--- a/test/subproject/build.gradle
+++ b/test/subproject/build.gradle
@@ -5,12 +5,14 @@ plugins {
 }
 
 repositories {
-    repositories {
-        mavenCentral()
-        maven {
-            name = "ParchmentMC"
-            url = uri("https://maven.parchmentmc.org/")
-        }
+    if (project.useLocalMavenForTesting) {
+        mavenLocal()
+    }
+
+    mavenCentral()
+    maven {
+        name = "ParchmentMC"
+        url = uri("https://maven.parchmentmc.org/")
     }
 }
 
@@ -26,7 +28,10 @@ crochet {
 
             dependencies {
                 loader 'net.fabricmc:fabric-loader:0.16.0'
-                parchment 'org.parchmentmc.data:parchment-1.21:2024.07.28@zip'
+                mappings = chained {
+                    add official()
+                    add(artifact 'org.parchmentmc.data:parchment-1.21:2024.07.28@zip')
+                }
                 publishInjectedInterfaces file('interfaces.json')
             }
 
