--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -18,10 +18,19 @@ managedVersioning {
 }
 
 repositories {
+    if (project.useLocalMavenForTesting) {
+        mavenLocal()
+    }
+
     mavenCentral()
     maven {
         url = 'https://maven.fabricmc.net/'
     }
+}
+
+var versions = new Properties()
+file("../src/main/resources/versions.properties").withInputStream {
+    versions.load(it)
 }
 
 dependencies {
@@ -32,14 +41,15 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.11.0'
     annotationProcessor 'info.picocli:picocli-codegen:4.7.6'
 
-    implementation('dev.lukebemish:taskgraphrunner:0.1.0') {
+    implementation("dev.lukebemish:taskgraphrunner:${versions.taskgraphrunner}") {
         capabilities {
             requireCapability("dev.lukebemish:taskgraphrunner-signatures")
         }
     }
 
     // TODO: conventions
-    compileOnly 'org.jetbrains:annotations:23.1.0'
+    compileOnly cLibs.bundles.compileonly
+    annotationProcessor cLibs.bundles.annotationprocessor
 }
 
 java {
