--- a/test/subproject/build.gradle
+++ b/test/subproject/build.gradle
@@ -22,22 +22,20 @@ group = 'dev.lukebemish.crochet.crochet-test'
 version = '1.0.0'
 
 crochet {
-    installations {
-        register('fabric', dev.lukebemish.crochet.model.FabricInstallation) {
-            minecraft = '1.21.1'
+    fabric('fabric') {
+        minecraft = '1.21.1'
 
-            dependencies {
-                loader 'net.fabricmc:fabric-loader:0.16.0'
-                mappings = chained {
-                    add official()
-                    add(artifact 'org.parchmentmc.data:parchment-1.21:2024.07.28@zip')
-                }
-                publishInjectedInterfaces file('interfaces.json')
+        dependencies {
+            loader 'net.fabricmc:fabric-loader:0.16.0'
+            mappings = chained {
+                add official()
+                add(artifact 'org.parchmentmc.data:parchment-1.21:2024.07.28@zip')
             }
+            publishInjectedInterfaces file('interfaces.json')
+        }
 
-            forFeature(project.sourceSets.main) {
-                modApi 'net.fabricmc.fabric-api:fabric-api:0.105.0+1.21.1'
-            }
+        forFeature(project.sourceSets.main) {
+            modApi 'net.fabricmc.fabric-api:fabric-api:0.105.0+1.21.1'
         }
     }
     runs {
