--- a/tools/build.gradle
+++ b/tools/build.gradle
@@ -63,8 +63,12 @@ java {
 tasks.withType(AbstractArchiveTask) {
     preserveFileTimestamps = false
     reproducibleFileOrder = true
-    dirMode = 0755
-    fileMode = 0644
+    dirPermissions {
+        it.unix 0755
+    }
+    filePermissions {
+        it.unix 0644
+    }
 }
 
 compileJava {
